--- a/_config.yml
+++ b/_config.yml
@@ -181,6 +181,9 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
+  preprints:
+    output: false
+    permalink: /:collection/:path/
   portfolio:
     output: true
     permalink: /:collection/:path/
